# 26-AITU-FINAL-SNAPSHOT

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/: README.md
.agents/commands/: dispatch-manager.md  pivot.md  report-bug.md  report-risk.md  risk-autopilot.md  solve-ad.md  solve-scada.md  solve-web.md  update-host-routes.md
.claude/skills/dispatch-manager/: SKILL.md
.claude/skills/pivot/: SKILL.md
.claude/skills/report-bug/: SKILL.md
scripts/: reset.sh
scripts/ad/: ad_enum.py
scripts/msf/: msf_client.py  start_msfrpcd.sh
scripts/pivot/: ligolo-agent.sh  ligolo-iface.sh  ligolo-proxy.sh  ligolo-route.sh  ligolo-tunnel.sh
scripts/recon/: fast_port_scan.py  fast_scan.py  full_scan.py  scan_and_import.py  web_enum.py
scripts/report/: package_attachments.py
scripts/scada/: modbus_rw.py  modbus_scanner.py
scripts/templates/: README.md  bacnet_scan.py  dnp3_client.py  enip_client.py  iec104_client.py  modbus_tcp.py  mqtt_client.py  opcua_client.py  protocol_detect.py  s7comm_client.py
scripts/util/: dispatch_board.sh  objective_state.sh
tools/: README.md  ad-pentest-cheatsheet.md  tool-list.md
tools/bins/: README.md
tools/scada/: README.md  bacnet_template.py  dnp3_template.py  enip_template.py  iec104_template.py  modbus_template.py  mqtt_template.py  opcua_template.py  protocol_detect_template.py  s7comm_template.py  scada_template_base.py  unknown_protocol_template.py
web-app/: README.md  package.json  pnpm-lock.yaml  prisma.config.ts
web-app/prisma/: schema.prisma
web-app/scripts/: reset-db.sh
(+137 files in other folders)
